# TotorialGenerator

./: .gitignore  CMakeLists.txt  README.md
src/: appsettings.cpp  appsettings.h  htmlrenderer.cpp  htmlrenderer.h  main.cpp  mainwindow.cpp  mainwindow.h  openai_client.cpp  openai_client.h  promptbuilder.cpp  promptbuilder.h  responseparser.cpp  responseparser.h  settingsdialog.cpp  settingsdialog.h  solutiondraft.cpp  solutiondraft.h
tests/: tst_render_and_parse.cpp
